convert to functional style